--- a/index.html
+++ b/index.html
@@ -9,90 +9,89 @@
       margin: 15px;
       background: transparent;
     }
+code
+Code
+/* 1️⃣ 极简样式：无边框、无阴影 */
+.aplayer {
+  border: none !important;
+  box-shadow: none !important;
+  background: #fff;
+  border-radius: 0 !important;
+  --zinnia-theme: #e9e9e9;
+}
 
-    /* 1️⃣ 极简样式：无边框、无阴影 */
-    .aplayer {
-      border: none !important;
-      box-shadow: none !important;
-      background: #fff;
-      border-radius: 0 !important;
-      --zinnia-theme: #e9e9e9;
-    }
+.aplayer .aplayer-info,
+.aplayer .aplayer-list,
+.aplayer .aplayer-list ol li {
+  border: none !important;
+}
 
-    .aplayer .aplayer-info,
-    .aplayer .aplayer-list,
-    .aplayer .aplayer-list ol li {
-      border: none !important;
-    }
+/* 2️⃣ 列表尺寸：精准 3 首歌高度 (26px * 3 = 78px) */
+.aplayer .aplayer-list {
+  max-height: 78px !important;
+  overflow: hidden !important;
+}
 
-    /* 2️⃣ 列表尺寸：微调为 80px，给 26px*3 留出 2px 的渲染容错空间 */
-    .aplayer .aplayer-list {
-      max-height: 80px !important; 
-      overflow: hidden !important;
-    }
+.aplayer .aplayer-list ol {
+  max-height: 78px !important;
+  overflow-y: auto !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  scroll-behavior: smooth; 
+}
 
-    .aplayer .aplayer-list ol {
-      max-height: 80px !important;
-      overflow-y: auto !important;
-      margin: 0 !important;
-      padding: 1px 0 !important; /* ✨ 微调保护垫 */
-      scroll-behavior: smooth; 
-    }
+.aplayer .aplayer-list ol::-webkit-scrollbar {
+  display: none !important;
+}
 
-    .aplayer .aplayer-list ol::-webkit-scrollbar {
-      display: none !important;
-    }
+/* 3️⃣ 列表行样式 (26px) */
+.aplayer .aplayer-list ol li {
+  background-image: none !important;
+  height: 26px !important;   
+  line-height: 26px !important;
+  padding: 0 15px !important;
+  font-size: 12px !important;
+  display: flex !important; 
+  align-items: center !important;
+}
 
-    /* 3️⃣ 列表行样式 (26px) */
-    .aplayer .aplayer-list ol li {
-      background-image: none !important;
-      height: 26px !important;   
-      line-height: 26px !important;
-      padding: 0 15px !important;
-      font-size: 12px !important;
-      display: flex !important; 
-      align-items: center !important;
-    }
+/* 4️⃣ 颜色统一：全部使用 #333 */
+.aplayer .aplayer-list ol li .aplayer-list-title {
+  color: #333 !important; 
+  font-weight: 400 !important;
+  flex-grow: 1; 
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 
-    /* 4️⃣ 颜色统一：全部使用 #333 */
-    .aplayer .aplayer-list ol li .aplayer-list-title {
-      color: #333 !important; 
-      font-weight: 400 !important;
-      flex-grow: 1; 
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
+.aplayer .aplayer-list ol li .aplayer-list-author {
+  color: #333 !important; 
+  font-size: 11px !important;
+  margin-left: 10px;
+}
 
-    .aplayer .aplayer-list ol li .aplayer-list-author {
-      color: #333 !important; 
-      font-size: 11px !important;
-      margin-left: 10px;
-    }
+.aplayer .aplayer-list ol li.aplayer-list-light {
+  background: #f4f4f4 !important;
+}
 
-    .aplayer .aplayer-list ol li.aplayer-list-light {
-      background: #f4f4f4 !important;
-    }
+/* 5️⃣ 小竖条：仅高亮行显示 */
+.aplayer .aplayer-list ol li .aplayer-list-cur {
+  display: none !important; 
+}
 
-    /* 5️⃣ 小竖条：仅高亮行显示 */
-    .aplayer .aplayer-list ol li .aplayer-list-cur {
-      display: none !important; 
-    }
-
-    .aplayer .aplayer-list ol li.aplayer-list-light .aplayer-list-cur {
-      display: block !important; 
-      width: 2px !important;
-      height: 16px !important; 
-      top: 5px !important;
-      background: var(--zinnia-theme) !important;
-    }
+.aplayer .aplayer-list ol li.aplayer-list-light .aplayer-list-cur {
+  display: block !important; 
+  width: 2px !important;
+  height: 16px !important; 
+  top: 5px !important;
+  background: var(--zinnia-theme) !important;
+}
   </style>
 </head>
-
 <body>
   <div id="aplayer"></div>
   <script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>
-
   <script>
     const audioList = [
       { name: 'Her Silence', artist: '何真真', url: 'music/何真真 - Her Silence.mp3', cover: 'cover/何真真 - Her Silence.jpg' },
@@ -107,14 +106,14 @@
     const ap = new APlayer({
       container: document.getElementById('aplayer'),
       listFolded: false,
-      listMaxHeight: '80px', 
+      listMaxHeight: '78px', 
       audio: audioList,
       theme: '#e9e9e9'
     });
 
     const colorThief = new ColorThief();
 
-    // ✨ 变色龙核心函数（保持你最稳定的版本不变）
+    // ✨ 变色龙核心函数
     function chameleon() {
       const index = ap.list.index;
       const audio = audioList[index];
@@ -126,35 +125,30 @@
         try {
           const color = colorThief.getColor(img);
           const rgb = `rgb(${color[0]}, ${color[1]}, ${color[2]})`;
-          ap.theme(rgb, index);
-          ap.container.style.setProperty('--zinnia-theme', rgb);
+          ap.theme(rgb, index); // 更新 APlayer 主题色
+          ap.container.style.setProperty('--zinnia-theme', rgb); // 更新 CSS 变量（小竖条）
         } catch (e) {}
       };
       img.src = audio.cover;
     }
 
-    // ✨ 滚动修正函数：改为精准数学居中，不再“贴边”
+    // ✨ 滚动修正函数
     function scrollFix() {
       const container = document.querySelector('.aplayer-list ol');
-      if (container) {
-        // 当前歌曲序号
-        const idx = ap.list.index;
-        // 目标：让当前歌出现在第 2 行。
-        // 所以让第 (idx-1) 首歌滚到最上面。每一行 26px。
-        const targetScroll = (idx - 1) * 26;
-        container.scrollTo({
-          top: targetScroll,
-          behavior: 'smooth'
-        });
+      const active = document.querySelector('.aplayer-list-light');
+      if (container && active) {
+        // 使用最原生的方法将当前曲目滚动到视野内，不再强求“对齐”
+        active.scrollIntoView({ behavior: 'smooth', block: 'nearest' });
       }
     }
 
-    // 监听事件：切换歌曲时触发
+    // 监听事件：切换歌曲时触发变色和滚动
     ap.on('listswitch', () => {
       chameleon();
-      setTimeout(scrollFix, 150); 
+      setTimeout(scrollFix, 150); // 给一点延迟，等 DOM 渲染完再滚
     });
 
+    // 页面初次加载
     window.addEventListener('load', () => {
       setTimeout(chameleon, 300);
     });
