--- a/index.html
+++ b/index.html
@@ -9,89 +9,91 @@
       margin: 15px;
       background: transparent;
     }
-code
-Code
-/* 1️⃣ 极简样式：无边框、无阴影 */
-.aplayer {
-  border: none !important;
-  box-shadow: none !important;
-  background: #fff;
-  border-radius: 0 !important;
-  --zinnia-theme: #e9e9e9;
-}
 
-.aplayer .aplayer-info,
-.aplayer .aplayer-list,
-.aplayer .aplayer-list ol li {
-  border: none !important;
-}
+    /* 1️⃣ 极简样式：无边框、无阴影 */
+    .aplayer {
+      border: none !important;
+      box-shadow: none !important;
+      background: #fff;
+      border-radius: 0 !important;
+      --zinnia-theme: #e9e9e9;
+    }
 
-/* 2️⃣ 列表尺寸：精准 3 首歌高度 (26px * 3 = 78px) */
-.aplayer .aplayer-list {
-  max-height: 78px !important;
-  overflow: hidden !important;
-}
+    .aplayer .aplayer-info,
+    .aplayer .aplayer-list,
+    .aplayer .aplayer-list ol li {
+      border: none !important;
+    }
 
-.aplayer .aplayer-list ol {
-  max-height: 78px !important;
-  overflow-y: auto !important;
-  margin: 0 !important;
-  padding: 0 !important;
-  scroll-behavior: smooth; 
-}
+    /* 2️⃣ 列表尺寸：微调高度为 92px，给滚动留出“呼吸空间” */
+    .aplayer .aplayer-list {
+      max-height: 92px !important; /* 原来 78 + 上下各 7px 垫子 = 92 */
+      overflow: hidden !important;
+    }
 
-.aplayer .aplayer-list ol::-webkit-scrollbar {
-  display: none !important;
-}
+    .aplayer .aplayer-list ol {
+      max-height: 92px !important;
+      overflow-y: auto !important;
+      margin: 0 !important;
+      /* ✨ 核心修正：增加 7px 垫子。当歌曲滚到顶时，它会停在垫子边缘，不会被吃字 */
+      padding: 7px 0 !important; 
+      scroll-behavior: smooth; 
+    }
 
-/* 3️⃣ 列表行样式 (26px) */
-.aplayer .aplayer-list ol li {
-  background-image: none !important;
-  height: 26px !important;   
-  line-height: 26px !important;
-  padding: 0 15px !important;
-  font-size: 12px !important;
-  display: flex !important; 
-  align-items: center !important;
-}
+    .aplayer .aplayer-list ol::-webkit-scrollbar {
+      display: none !important;
+    }
 
-/* 4️⃣ 颜色统一：全部使用 #333 */
-.aplayer .aplayer-list ol li .aplayer-list-title {
-  color: #333 !important; 
-  font-weight: 400 !important;
-  flex-grow: 1; 
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
+    /* 3️⃣ 列表行样式 (26px) */
+    .aplayer .aplayer-list ol li {
+      background-image: none !important;
+      height: 26px !important;   
+      line-height: 26px !important;
+      padding: 0 15px !important;
+      font-size: 12px !important;
+      display: flex !important; 
+      align-items: center !important;
+    }
 
-.aplayer .aplayer-list ol li .aplayer-list-author {
-  color: #333 !important; 
-  font-size: 11px !important;
-  margin-left: 10px;
-}
+    /* 4️⃣ 颜色统一：全部使用 #333 */
+    .aplayer .aplayer-list ol li .aplayer-list-title {
+      color: #333 !important; 
+      font-weight: 400 !important;
+      flex-grow: 1; 
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
 
-.aplayer .aplayer-list ol li.aplayer-list-light {
-  background: #f4f4f4 !important;
-}
+    .aplayer .aplayer-list ol li .aplayer-list-author {
+      color: #333 !important; 
+      font-size: 11px !important;
+      margin-left: 10px;
+    }
 
-/* 5️⃣ 小竖条：仅高亮行显示 */
-.aplayer .aplayer-list ol li .aplayer-list-cur {
-  display: none !important; 
-}
+    .aplayer .aplayer-list ol li.aplayer-list-light {
+      background: #f4f4f4 !important;
+    }
 
-.aplayer .aplayer-list ol li.aplayer-list-light .aplayer-list-cur {
-  display: block !important; 
-  width: 2px !important;
-  height: 16px !important; 
-  top: 5px !important;
-  background: var(--zinnia-theme) !important;
-}
+    /* 5️⃣ 小竖条：仅高亮行显示 */
+    .aplayer .aplayer-list ol li .aplayer-list-cur {
+      display: none !important; 
+    }
+
+    .aplayer .aplayer-list ol li.aplayer-list-light .aplayer-list-cur {
+      display: block !important; 
+      width: 2px !important;
+      height: 16px !important; 
+      top: 5px !important;
+      background: var(--zinnia-theme) !important;
+    }
   </style>
 </head>
+
 <body>
   <div id="aplayer"></div>
   <script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>
+
   <script>
     const audioList = [
       { name: 'Her Silence', artist: '何真真', url: 'music/何真真 - Her Silence.mp3', cover: 'cover/何真真 - Her Silence.jpg' },
@@ -113,7 +115,7 @@ Code
 
     const colorThief = new ColorThief();
 
-    // ✨ 变色龙核心函数
+    // ✨ 变色龙核心函数 (完全未动)
     function chameleon() {
       const index = ap.list.index;
       const audio = audioList[index];
@@ -125,30 +127,28 @@ Code
         try {
           const color = colorThief.getColor(img);
           const rgb = `rgb(${color[0]}, ${color[1]}, ${color[2]})`;
-          ap.theme(rgb, index); // 更新 APlayer 主题色
-          ap.container.style.setProperty('--zinnia-theme', rgb); // 更新 CSS 变量（小竖条）
+          ap.theme(rgb, index); 
+          ap.container.style.setProperty('--zinnia-theme', rgb); 
         } catch (e) {}
       };
       img.src = audio.cover;
     }
 
-    // ✨ 滚动修正函数
+    // ✨ 滚动修正函数 (完全未动)
     function scrollFix() {
       const container = document.querySelector('.aplayer-list ol');
       const active = document.querySelector('.aplayer-list-light');
       if (container && active) {
-        // 使用最原生的方法将当前曲目滚动到视野内，不再强求“对齐”
         active.scrollIntoView({ behavior: 'smooth', block: 'nearest' });
       }
     }
 
-    // 监听事件：切换歌曲时触发变色和滚动
+    // 监听事件 (完全未动)
     ap.on('listswitch', () => {
       chameleon();
-      setTimeout(scrollFix, 150); // 给一点延迟，等 DOM 渲染完再滚
+      setTimeout(scrollFix, 150); 
     });
 
-    // 页面初次加载
     window.addEventListener('load', () => {
       setTimeout(chameleon, 300);
     });
