--- a/index.html
+++ b/index.html
@@ -25,18 +25,17 @@
       border: none !important;
     }
 
-    /* 2️⃣ 列表尺寸：微调高度为 92px，给滚动留出“呼吸空间” */
+    /* 2️⃣ 列表尺寸：精准 3 首歌高度 (26px * 3 = 78px) */
     .aplayer .aplayer-list {
-      max-height: 92px !important; /* 原来 78 + 上下各 7px 垫子 = 92 */
+      max-height: 78px !important;
       overflow: hidden !important;
     }
 
     .aplayer .aplayer-list ol {
-      max-height: 92px !important;
+      max-height: 78px !important;
       overflow-y: auto !important;
       margin: 0 !important;
-      /* ✨ 核心修正：增加 7px 垫子。当歌曲滚到顶时，它会停在垫子边缘，不会被吃字 */
-      padding: 7px 0 !important; 
+      padding: 0 !important;
       scroll-behavior: smooth; 
     }
 
@@ -115,7 +114,7 @@
 
     const colorThief = new ColorThief();
 
-    // ✨ 变色龙核心函数 (完全未动)
+    // ✨ 变色龙核心函数
     function chameleon() {
       const index = ap.list.index;
       const audio = audioList[index];
@@ -127,28 +126,30 @@
         try {
           const color = colorThief.getColor(img);
           const rgb = `rgb(${color[0]}, ${color[1]}, ${color[2]})`;
-          ap.theme(rgb, index); 
-          ap.container.style.setProperty('--zinnia-theme', rgb); 
+          ap.theme(rgb, index); // 更新 APlayer 主题色
+          ap.container.style.setProperty('--zinnia-theme', rgb); // 更新 CSS 变量（小竖条）
         } catch (e) {}
       };
       img.src = audio.cover;
     }
 
-    // ✨ 滚动修正函数 (完全未动)
+    // ✨ 滚动修正函数
     function scrollFix() {
       const container = document.querySelector('.aplayer-list ol');
       const active = document.querySelector('.aplayer-list-light');
       if (container && active) {
+        // 使用最原生的方法将当前曲目滚动到视野内，不再强求“对齐”
         active.scrollIntoView({ behavior: 'smooth', block: 'nearest' });
       }
     }
 
-    // 监听事件 (完全未动)
+    // 监听事件：切换歌曲时触发变色和滚动
     ap.on('listswitch', () => {
       chameleon();
-      setTimeout(scrollFix, 150); 
+      setTimeout(scrollFix, 150); // 给一点延迟，等 DOM 渲染完再滚
     });
 
+    // 页面初次加载
     window.addEventListener('load', () => {
       setTimeout(chameleon, 300);
     });
