--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
     const ap = new APlayer({
       container: document.getElementById('aplayer'),
-      listFolded: false,
+      listFolded: true,
       listMaxHeight: '86px', 
       audio: audioList,
       theme: '#e9e9e9'
