--- a/index.html
+++ b/index.html
@@ -25,8 +25,14 @@
       border: none !important;
     }
 
-    /* 2️⃣ 列表容器：精准 3 首歌高度 (26px * 3 = 78px) */
+    /* 🌟 核心修改：使用 CSS 强制默认隐藏列表 🌟 */
+    /* 默认状态下（不带 .aplayer-withlist 类时），强行不显示列表 */
     .aplayer .aplayer-list {
+      display: none !important; 
+    }
+    /* 只有当用户点击按钮，播放器容器获得了 .aplayer-withlist 类时，才允许显示列表 */
+    .aplayer.aplayer-withlist .aplayer-list {
+      display: block !important;
       max-height: 78px !important;
       overflow: hidden !important;
     }
@@ -119,15 +125,11 @@
 
     const ap = new APlayer({
       container: document.getElementById('aplayer'),
-      listFolded: true, // 设置默认折叠
-      storageName: 'aplayer-setting-unique', // ✨ 关键：改个名字避开浏览器之前的展开记录
+      listFolded: true, // 保持为 true
       listMaxHeight: '78px', 
       audio: audioList,
       theme: '#e9e9e9'
     });
-
-    // ✨ 强制执行一次隐藏指令
-    ap.list.hide();
 
     const colorThief = new ColorThief();
     let themeTimer = null;
