--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
       top: 5px !important;
       background: var(--zinnia-theme) !important;
     }
+
+    /* 🌟 CSS 补丁：强制默认状态不显示列表，防止 JS 失效 */
+    .aplayer:not(.aplayer-withlist) .aplayer-list {
+      display: none !important;
+    }
   </style>
 </head>
 
@@ -119,15 +124,12 @@
 
     const ap = new APlayer({
       container: document.getElementById('aplayer'),
-      listFolded: true, // 保险 1：默认折叠开启
-      storageName: 'aplayer-setting-folded-final-v3', // 保险 2：更换全新 ID，强制浏览器清除记忆
+      listFolded: true, // ✨ 1. 核心开关
+      storageName: 'aplayer-setting-unique-v8', // ✨ 2. 强制清除浏览器记忆
       listMaxHeight: '78px', 
       audio: audioList,
       theme: '#e9e9e9'
     });
-
-    // 保险 3：JS 强制隐藏列表
-    ap.list.hide();
 
     const colorThief = new ColorThief();
     let themeTimer = null;
@@ -161,18 +163,12 @@
       }, 60);
     }
 
-    // ✨ 终极滚动修复逻辑
     ap.on('listswitch', () => {
       setTimeout(() => {
         const listContainer = document.querySelector('.aplayer-list ol');
         if (listContainer) {
-          const currentIndex = ap.list.index; 
-          let targetPos = 0;
-          if (currentIndex > 0) {
-            targetPos = (currentIndex - 1) * 26;
-          } else {
-            targetPos = 0; 
-          }
+          const currentIndex = ap.list.index;
+          let targetPos = (currentIndex > 0) ? (currentIndex - 1) * 26 : 0;
           listContainer.scrollTop = targetPos;
         }
       }, 250); 
@@ -181,6 +177,8 @@
 
     window.addEventListener('load', () => {
       setTimeout(updateThemeSafe, 300);
+      // ✨ 3. 初始加载后再次强制折叠一次列表
+      ap.list.hide();
     });
   </script>
 </body>
