--- a/index.html
+++ b/index.html
@@ -95,94 +95,4 @@
       position: absolute;
       left: 0;
       width: 2px !important;
-      height: 16px !important; 
-      top: 5px !important;
-      background: var(--zinnia-theme) !important;
-    }
-  </style>
-</head>
-
-<body>
-  <div id="aplayer"></div>
-  <script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>
-
-  <script>
-    const audioList = [
-      { name: '温柔的黎明', artist: '南里侑香', url: 'music/南里侑香 - 温柔的黎明.m4a', cover: 'cover/南里侑香 - 温柔的黎明.jpg' },
-      { name: 'Her Silence', artist: '何真真', url: 'music/何真真 - Her Silence.mp3', cover: 'cover/何真真 - Her Silence.jpg' },
-      { name: 'Hurricanes', artist: 'Dido', url: 'music/Dido - Hurricanes.mp3', cover: 'cover/Dido - Hurricanes.jpg' },
-      { name: 'Everytime you kissed me', artist: 'FictionJunction', url: 'music/FictionJunction - Everytime you kissed me.mp3', cover: 'cover/FictionJunction - Everytime you kissed me.jpg' },
-      { name: '沙尘的彼方', artist: 'FictionJunction', url: 'music/FictionJunction - 沙尘的彼方.mp3', cover: 'cover/FictionJunction - 沙尘的彼方.jpg' },
-      { name: 'My long forgotten cloistered sleep', artist: 'FictionJunction', url: 'music/FictionJunction - My long forgotten cloistered sleep.mp3', cover: 'cover/FictionJunction - My long forgotten cloistered sleep.jpg' },
-      { name: '花守之丘', artist: 'FictionJunction', url: 'music/FictionJunction - 花守之丘.mp3', cover: 'cover/FictionJunction - 花守之丘.jpg' },
-      { name: 'Rewrite The Stars', artist: 'Zendaya', url: 'music/Zendaya - Rewrite The Stars.mp3', cover: 'cover/Zendaya - Rewrite The Stars.jpg' }
-    ];
-
-    const ap = new APlayer({
-      container: document.getElementById('aplayer'),
-      listFolded: true, // 核心：默认折叠
-      storageName: 'ap-storage-' + Math.random(), // ✨ 暴力：每次打开都是一个全新的 ID，不准记忆状态
-      listMaxHeight: '78px', 
-      audio: audioList,
-      theme: '#e9e9e9'
-    });
-
-    // ✨ 暴力：强制立即关闭列表并移除类名
-    ap.list.hide();
-    document.getElementById('aplayer').classList.remove('aplayer-withlist');
-
-    const colorThief = new ColorThief();
-    let themeTimer = null;
-
-    function getActiveIndex() {
-      const active = document.querySelector('.aplayer-list-light');
-      if (!active) return ap.list.index;
-      const di = active.getAttribute('data-index');
-      return (di !== null && di !== '') ? Number(di) : ap.list.index;
-    }
-
-    function updateThemeSafe() {
-      clearTimeout(themeTimer);
-      themeTimer = setTimeout(() => {
-        const index = getActiveIndex();
-        const imgUrl = audioList[index]?.cover;
-        if (!imgUrl) return;
-
-        const img = new Image();
-        img.crossOrigin = 'Anonymous';
-        img.referrerPolicy = 'no-referrer';
-        img.onload = () => {
-          try {
-            const c = colorThief.getColor(img);
-            const themeColor = `rgb(${c[0]}, ${c[1]}, ${c[2]})`;
-            ap.theme(themeColor, index);
-            ap.container.style.setProperty('--zinnia-theme', themeColor);
-          } catch (e) {}
-        };
-        img.src = imgUrl + (imgUrl.includes('?') ? '&' : '?') + 'cb=' + Date.now();
-      }, 60);
-    }
-
-    ap.on('listswitch', () => {
-      setTimeout(() => {
-        const listContainer = document.querySelector('.aplayer-list ol');
-        if (listContainer) {
-          const currentIndex = ap.list.index;
-          let targetPos = (currentIndex > 0) ? (currentIndex - 1) * 26 : 0;
-          listContainer.scrollTop = targetPos;
-        }
-      }, 250); 
-      updateThemeSafe();
-    });
-
-    window.addEventListener('load', () => {
-      // ✨ 暴力：加载完成后再关一次
-      setTimeout(() => {
-          ap.list.hide();
-          document.getElementById('aplayer').classList.remove('aplayer-withlist');
-      }, 100);
-      setTimeout(updateThemeSafe, 300);
-    });
-  </script>
-</body>
-</html>
+      height: 16px !import
