--- a/index.html
+++ b/index.html
@@ -95,4 +95,91 @@
       position: absolute;
       left: 0;
       width: 2px !important;
-      height: 16px !import
+      height: 16px !important; 
+      top: 5px !important;
+      background: var(--zinnia-theme) !important;
+    }
+  </style>
+</head>
+
+<body>
+  <div id="aplayer"></div>
+  <script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>
+
+  <script>
+    // ✨ 核心修正：使用 encodeURI 确保包含日语和空格的路径能被浏览器正确识别
+    const audioList = [
+      { 
+        name: '温柔的黎明', 
+        artist: '南里侑香', 
+        url: encodeURI('music/南里侑香 - 温柔的黎明.m4a'), 
+        cover: encodeURI('cover/南里侑香 - 温柔的黎明.jpg') 
+      }
+    ];
+
+    const ap = new APlayer({
+      container: document.getElementById('aplayer'),
+      listFolded: true, 
+      storageName: 'ap-storage-' + Math.random(), 
+      listMaxHeight: '78px', 
+      audio: audioList,
+      theme: '#e9e9e9'
+    });
+
+    ap.list.hide();
+    document.getElementById('aplayer').classList.remove('aplayer-withlist');
+
+    const colorThief = new ColorThief();
+    let themeTimer = null;
+
+    function getActiveIndex() {
+      const active = document.querySelector('.aplayer-list-light');
+      if (!active) return ap.list.index;
+      const di = active.getAttribute('data-index');
+      return (di !== null && di !== '') ? Number(di) : ap.list.index;
+    }
+
+    function updateThemeSafe() {
+      clearTimeout(themeTimer);
+      themeTimer = setTimeout(() => {
+        const index = getActiveIndex();
+        const imgUrl = audioList[index]?.cover;
+        if (!imgUrl) return;
+
+        const img = new Image();
+        img.crossOrigin = 'Anonymous';
+        img.referrerPolicy = 'no-referrer';
+        img.onload = () => {
+          try {
+            const c = colorThief.getColor(img);
+            const themeColor = `rgb(${c[0]}, ${c[1]}, ${c[2]})`;
+            ap.theme(themeColor, index);
+            ap.container.style.setProperty('--zinnia-theme', themeColor);
+          } catch (e) {}
+        };
+        img.src = imgUrl + (imgUrl.includes('?') ? '&' : '?') + 'cb=' + Date.now();
+      }, 60);
+    }
+
+    ap.on('listswitch', () => {
+      setTimeout(() => {
+        const listContainer = document.querySelector('.aplayer-list ol');
+        if (listContainer) {
+          const currentIndex = ap.list.index;
+          let targetPos = (currentIndex > 0) ? (currentIndex - 1) * 26 : 0;
+          listContainer.scrollTop = targetPos;
+        }
+      }, 250); 
+      updateThemeSafe();
+    });
+
+    window.addEventListener('load', () => {
+      setTimeout(() => {
+          ap.list.hide();
+          document.getElementById('aplayer').classList.remove('aplayer-withlist');
+      }, 100);
+      setTimeout(updateThemeSafe, 300);
+    });
+  </script>
+</body>
+</html>
