--- a/index.html
+++ b/index.html
@@ -25,15 +25,18 @@
       border: none !important;
     }
 
-    /* 🌟 核心修正：强行找回“上一曲、下一曲、循环/随机”按钮 */
-    /* APlayer 在高度压缩时会隐藏这些，我们强制它们显示 */
+    /* ✨ 彻底隐藏你手指的那个灰色横杠（歌词占位符） */
+    .aplayer .aplayer-lrc {
+        display: none !important;
+    }
+
+    /* 强制找回“上一曲、下一曲、循环/随机”按钮 */
     .aplayer .aplayer-info .aplayer-controller .aplayer-time .aplayer-icon {
-        display: inline-block !important; /* 强制显示所有图标 */
+        display: inline-block !important; 
     }
     .aplayer .aplayer-info .aplayer-controller .aplayer-time .aplayer-icon-menu {
-        display: none !important; /* 如果你不需要列表切换按钮可以隐藏，但我建议留着 */
+        display: none !important; 
     }
-    /* 保持按钮颜色随主题变色 */
     .aplayer .aplayer-info .aplayer-controller .aplayer-time .aplayer-icon path {
         fill: #666; 
         transition: all 0.3s ease;
@@ -141,7 +144,6 @@
       theme: '#e9e9e9'
     });
 
-    // ✨ 暴力隐藏逻辑保持不变
     ap.list.hide();
     document.getElementById('aplayer').classList.remove('aplayer-withlist');
 
